<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserInfoEditActivity"
    android:orientation="vertical"
    android:id="@+id/activityUserInfoEdit">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAllowStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow to be studied"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/rgAllow4Study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rStudyYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="Yes" />
            <RadioButton
                android:id="@+id/rStudyNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="No" />
        </RadioGroup>

        <!--======================-->

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Gender"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="Female" />
            <RadioButton
                android:id="@+id/rGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="Male" />
            <RadioButton
                android:id="@+id/rGenderNA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="N/A" />
        </RadioGroup>

        <!--======================-->

        <TextView
            android:id="@+id/tvEthnicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Ethnicity"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/rgEthnicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rEthnicityWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="White" />
            <RadioButton
                android:id="@+id/rEthnicityBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="Black" />
            <RadioButton
                android:id="@+id/rEthnicityAsian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="Asian" />
            <RadioButton
                android:id="@+id/rEthnicityMixed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="Mixed" />
            <RadioButton
                android:id="@+id/rEthnicityNA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="N/A" />
        </RadioGroup>

        <!--======================-->
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Age"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/rgAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rAge0_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="0-16" />
            <RadioButton
                android:id="@+id/rAge17_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="17-30" />
            <RadioButton
                android:id="@+id/rAge31_60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="31-60" />
            <RadioButton
                android:id="@+id/rAge61_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="61-80" />
            <RadioButton
                android:id="@+id/rAge81__"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="81+" />
            <RadioButton
                android:id="@+id/rAgeNA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="N/A" />
        </RadioGroup>

        <!--======================-->

        <TextView
            android:id="@+id/tvNationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Nationality"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etNationality"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="Enter Nationality" />

        <!--======================-->

        <TextView
            android:id="@+id/tvPostCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Your Post Code"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPostCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="Enter Post Code" />

        <!--======================-->
        <Button
            android:id="@+id/btnDoneUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next" />
        </LinearLayout>
</ScrollView>