...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:id="@+id/activityMain">

    <Button
        android:id="@+id/btnNewInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
...
        app:layout_constraintStart_toStartOf="@+id/ivMainImageShadow"
        app:layout_constraintTop_toTopOf="@+id/ivMainImageShadow"
        app:srcCompat="@drawable/ic_baseline_emoji_events_24"
        app:tint="@color/burgundyAccent" />

    <TextView
        android:id="@+id/tvMainScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/preLoadStreak"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
